cmake_minimum_required(VERSION 3.21)
project(tema)

set(CMAKE_CXX_STANDARD 14)

add_executable(tema main.cpp hotel.cpp hotel.h camera.cpp camera.h cameraDubla.cpp cameraDubla.h cameraApartament.cpp cameraApartament.h cameraView.cpp cameraView.h clientHotel.cpp clientHotel.h clientHotelNationalitate.cpp clientHotelNationalitate.h erori.cpp erori.h application.cpp application.h cameraBuilt.cpp cameraBuilt.h clientTemplate.cpp clientTemplate.h eroriClient.cpp eroriClient.h)
